objects/Internal_Guideline_Factor__c.object
<CustomObject>
    <fields>
        <fullName>DieToWaferConv__c</fullName>
        <label>DieToWaferConv</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reticle__c</fullName>
        <label>Reticle</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TechID__c</fullName>
        <label>TechID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Node__c</fullName>
        <label>Tech Node</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wafer__c</fullName>
        <label>Wafer</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Internal Guideline Factor</label>
    <nameField>
        <displayFormat>IGF-{000000}</displayFormat>
        <label>Internal Guideline Factor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Guideline Factor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>